[project]
name = "seosiri-api-guard-mcp-server"
version = "1.0.0"
description = "A sovereign, universal API validation and multi-industry compliance security server using the Model Context Protocol."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "SEOSiri-Official", email = "info@seosiri.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Interface Engine"
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "jsonschema>=4.17.0"
]

[project.urls]
Homepage = "https://github.com/SEOSiri-Official/seosiri-api-guard-mcp-server"
Repository = "https://github.com/SEOSiri-Official/seosiri-api-guard-mcp-server.git"
Sponsorship = "https://github.com/sponsors/SEOSiri-Official"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.profiles"]